ghc-4335c07/testsuite/tests/parser/should_fail/position002.hs

module T where

-- We should get a parse error on column 33
-- Indented with tabs:
foo = 123456			module

